--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "@remotion/cli": "^4.0.4",
     "@remotion/media-utils": "^4.0.4",
     "@remotion/zod-types": "^4.0.4",
+    "@types/fluent-ffmpeg": "^2.1.24",
+    "audioconcat": "^0.1.4",
+    "fluent-ffmpeg": "^2.1.2",
     "openai": "^4.26.0",
     "parse-srt": "1.0.0-alpha",
     "react": "^18.0.0",
